objects/Student__c.object
<CustomObject>
    <description>to store student data</description>
    <label>Student</label>
    <nameField>
        <displayFormat>STU-{00000}</displayFormat>
        <label>StudentId</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Student</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Hod__c</fullName>
        <formula>Deartment__r.DeptHod__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hod</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>email__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>email</label>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Deartment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deartment</label>
        <referenceTo>Deartment__c</referenceTo>
        <relationshipLabel>Student</relationshipLabel>
        <relationshipName>Student</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Student_Name__c</fullName>
        <label>Student Name</label>
        <length>25</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
</CustomObject>